--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <meta property="og:title" content="Porfolio" />
+    <meta property="og:description" content="Full Stack Engineer" />
+    <meta property="og:image" content="%PUBLIC_URL%/icon.png" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Brayan React Personal Portfolio" />
@@ -14,6 +19,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
